row_max subtracted

--- a/assignments/assignment1/wordvec_sentiment.ipynb
+++ b/assignments/assignment1/wordvec_sentiment.ipynb
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -103,16 +103,17 @@
     "    ###################################################################\n",
     "    \n",
     "    ### YOUR CODE HERE\n",
-    "    row_max = x - x.max(axis=1)\n",
+    "    row_max = x.max(axis=1)\n",
+    "    x = x - row_max[:, np.newaxis]\n",
     "    \n",
     "    ### END YOUR CODE\n",
     "    \n",
-    "    return row_max"
+    "    return x"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -121,11 +122,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ -9  -3]\n",
-      " [  3 -11]]\n",
+      "[[ -9   0]\n",
+      " [  0 -11]]\n",
       "=== For autograder ===\n",
-      "[[  -1  998]\n",
-      " [-999    0]]\n",
+      "[[-1  0]\n",
+      " [-1  0]]\n",
       "[[ 0 -1]]\n"
      ]
     }
