softmax in numpy ;)

--- a/assignments/assignment1/wordvec_sentiment.ipynb
+++ b/assignments/assignment1/wordvec_sentiment.ipynb
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -103,8 +103,13 @@
     "    ###################################################################\n",
     "    \n",
     "    ### YOUR CODE HERE\n",
+    "    # subtracting max of each row from its elements\n",
     "    row_max = x.max(axis=1)\n",
     "    x = x - row_max[:, np.newaxis]\n",
+    "    \n",
+    "    x = np.exp(x)\n",
+    "    row_sum = x.sum(axis=1)\n",
+    "    x = x / row_sum[:, np.newaxis]\n",
     "    \n",
     "    ### END YOUR CODE\n",
     "    \n",
@@ -113,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -122,19 +127,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ -9   0]\n",
-      " [  0 -11]]\n",
+      "[[ 0.26894142  0.73105858]\n",
+      " [ 0.26894142  0.73105858]]\n",
       "=== For autograder ===\n",
-      "[[-1  0]\n",
-      " [-1  0]]\n",
-      "[[ 0 -1]]\n"
+      "[[ 0.26894142  0.73105858]\n",
+      " [ 0.26894142  0.73105858]]\n",
+      "[[ 0.73105858  0.26894142]]\n"
      ]
     }
    ],
    "source": [
     "# Verify your softmax implementation\n",
-    "print softmax(np.array([[3,12],\n",
-    "                  [15,4]]))\n",
+    "print softmax(np.array([[1,2],\n",
+    "                  [3,4]]))\n",
     "\n",
     "print \"=== For autograder ===\"\n",
     "print softmax(np.array([[1001,1002],[3,4]]))\n",
