--- a/assignments/assignment1/wordvec_sentiment.ipynb
+++ b/assignments/assignment1/wordvec_sentiment.ipynb
@@ -36,9 +36,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Run some setup code for this notebook. Don't modify anything in this cell.\n",
@@ -82,9 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def softmax(x):\n",
@@ -119,9 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -164,10 +158,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def sigmoid(x):\n",
@@ -177,7 +169,7 @@
     "    ###################################################################\n",
     "    \n",
     "    ### YOUR CODE HERE\n",
-    "\n",
+    "    x = 1. / np.exp(np.negative(x))\n",
     "    ### END YOUR CODE\n",
     "    \n",
     "    return x\n",
@@ -191,7 +183,7 @@
     "    ###################################################################\n",
     "    \n",
     "    ### YOUR CODE HERE\n",
-    "\n",
+    "    f = f * (1 - f)\n",
     "    ### END YOUR CODE\n",
     "    \n",
     "    return f"
@@ -199,20 +191,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "=== For autograder ===\n",
-      "[[ 1  2]\n",
-      " [-1 -2]]\n",
-      "[[ 1  2]\n",
-      " [-1 -2]]\n"
+      "[[ 2.71828183  7.3890561 ]\n",
+      " [ 0.36787944  0.13533528]]\n",
+      "[[ -4.67077427 -47.20909393]\n",
+      " [  0.23254416   0.11701964]]\n"
      ]
     }
    ],
@@ -235,10 +225,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# First implement a gradient checker by filling in the following functions\n",
@@ -262,8 +250,14 @@
     "        ### YOUR CODE HERE: try modifying x[ix] with h defined above to compute numerical gradients\n",
     "        ### make sure you call random.setstate(rndstate) before calling f(x) each time, this will make it \n",
     "        ### possible to test cost functions with built in randomness later\n",
-    "    \n",
-    "        return # replace this line with your code\n",
+    "        xph = x[ix] + h\n",
+    "        random.setstate(rndstate)  \n",
+    "        fph, tmp = f(xph)\n",
+    "        xmh = x[ix] - h\n",
+    "        random.setstate(rndstate)  \n",
+    "        fmh, tmp = f(xmh)\n",
+    "        \n",
+    "        numgrad = (fph - fmh) / (2 * h)\n",
     "    \n",
     "        ### END YOUR CODE\n",
     "\n",
@@ -282,11 +276,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== For autograder ===\n",
+      "Gradient check passed!\n",
+      "Gradient check passed!\n",
+      "Gradient check passed!\n"
+     ]
+    }
+   ],
    "source": [
     "# Sanity check for the gradient checker\n",
     "quad = lambda x: (np.sum(x ** 2), x * 2)\n",
@@ -299,10 +302,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Set up fake data and parameters for the neural network\n",
@@ -318,10 +319,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 50,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def forward_backward_prop(data, labels, params):\n",
@@ -342,18 +341,35 @@
     "    b2 = np.reshape(params[t:t+dimensions[2]], (1, dimensions[2]))\n",
     "    \n",
     "    ### YOUR CODE HERE: forward propagation\n",
+    "    A1 = np.dot(data, W1) + b1    # broadcasting on b1\n",
+    "    Z1 = sigmoid(A1)\n",
+    "    A2 = np.dot(Z1, W2) + b2\n",
+    "    Yhat = softmax(A2)   # Y output\n",
     "    \n",
     "    # cost = ...\n",
+    "    index = labels == 1\n",
+    "    logYhat = np.log(Yhat)\n",
+    "    cost = -np.sum(logYhat[index])\n",
+    "    set_trace()\n",
     "    \n",
     "    ### END YOUR CODE\n",
     "    \n",
     "    ### YOUR CODE HERE: backward propagation\n",
-    "\n",
-    "    #gradW1 = ...\n",
-    "    #gradb1 = ...\n",
-    "    #gradW2 = ...\n",
-    "    #gradb2 = ...\n",
+    "    targets = np.zeros(np.shape(Yhat))\n",
+    "    targets[index] = 1\n",
+    "    dA2 = Yhat - targets\n",
+    "    db2 = sum(dA2)\n",
+    "    dW2 = np.dot(Z1.T, dA2)\n",
     "    \n",
+    "    dZ1 = dA2.dot(W2.T)\n",
+    "    dA1 = np.multiply(sigmoid_grad(A1), dZ1)\n",
+    "    db1 = sum(dA1)\n",
+    "    dW1 = np.dot(data.T, dA1)\n",
+    "    \n",
+    "    gradb1 = db1\n",
+    "    gradW1 = dW1\n",
+    "    gradb2 = db2\n",
+    "    gradW2 = dW2\n",
     "    ### END YOUR CODE\n",
     "    \n",
     "    ### Stack gradients (do not modify)\n",
@@ -364,11 +380,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== For autograder ===\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'gradcheck_naive' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-1279beb8fc59>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# Perform gradcheck on your neural network\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;32mprint\u001b[0m \u001b[1;34m\"=== For autograder ===\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mgradcheck_naive\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;32mlambda\u001b[0m \u001b[0mparams\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mforward_backward_prop\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlabels\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mparams\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mparams\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'gradcheck_naive' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# Perform gradcheck on your neural network\n",
     "print \"=== For autograder ===\"\n",
@@ -376,10 +409,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "## 3. Word2vec\n",
+    "# 3. Word2vec\n",
     "\n",
     "*Please answer the third complementary problem before starting this part.*\n",
     "\n",
@@ -389,9 +424,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Implement your skip-gram and CBOW models here\n",
@@ -506,9 +539,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Implement a function that normalizes each row of a matrix to have unit length\n",
@@ -529,9 +560,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Gradient check!\n",
@@ -580,9 +609,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Now, implement SGD\n",
@@ -684,9 +711,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Load some data and initialize word vectors\n",
@@ -707,9 +732,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Train word vectors (this could take a while!)\n",
@@ -736,9 +759,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Visualize the word vectors you trained\n",
@@ -780,9 +801,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Now, implement some helper functions\n",
@@ -857,9 +876,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Gradient check always comes first\n",
@@ -881,9 +898,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Try different regularizations and pick the best!\n",
@@ -927,9 +942,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Write down the best regularization and accuracy you found\n",
@@ -948,9 +961,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Test your findings on the test set\n",
@@ -984,9 +995,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "### YOUR CODE HERE\n",
@@ -1010,7 +1019,7 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 2.0
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
