--- a/assignments/assignment1/wordvec_sentiment.ipynb
+++ b/assignments/assignment1/wordvec_sentiment.ipynb
@@ -35,9 +35,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "# Run some setup code for this notebook. Don't modify anything in this cell.\n",
     "\n",
@@ -79,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,22 +122,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 0.26894142  0.73105858]\n",
-      " [ 0.26894142  0.73105858]]\n",
-      "=== For autograder ===\n",
-      "[[ 0.26894142  0.73105858]\n",
-      " [ 0.26894142  0.73105858]]\n",
-      "[[ 0.73105858  0.26894142]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Verify your softmax implementation\n",
     "print softmax(np.array([[1,2],\n",
@@ -158,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,18 +186,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "=== For autograder ===\n",
-      "[[ 2.71828183  7.3890561 ]\n",
-      " [ 0.36787944  0.13533528]]\n",
-      "[[ -4.67077427 -47.20909393]\n",
-      " [  0.23254416   0.11701964]]\n"
+      "=== For autograder ===\n[[ 2.71828183  7.3890561 ]\n [ 0.36787944  0.13533528]]\n[[ -4.67077427 -47.20909393]\n [  0.23254416   0.11701964]]\n"
      ]
     }
    ],
@@ -225,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,10 +241,12 @@
     "        ### YOUR CODE HERE: try modifying x[ix] with h defined above to compute numerical gradients\n",
     "        ### make sure you call random.setstate(rndstate) before calling f(x) each time, this will make it \n",
     "        ### possible to test cost functions with built in randomness later\n",
-    "        xph = x[ix] + h\n",
+    "        xph = np.copy(x)\n",
+    "        xph[ix] = x[ix] + h\n",
     "        random.setstate(rndstate)  \n",
     "        fph, tmp = f(xph)\n",
-    "        xmh = x[ix] - h\n",
+    "        xmh = np.copy(x)\n",
+    "        xmh[ix] = x[ix] - h\n",
     "        random.setstate(rndstate)  \n",
     "        fmh, tmp = f(xmh)\n",
     "        \n",
@@ -276,17 +269,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "=== For autograder ===\n",
-      "Gradient check passed!\n",
-      "Gradient check passed!\n",
-      "Gradient check passed!\n"
+      "=== For autograder ===\nGradient check passed!\nGradient check passed!\nGradient check passed!\n"
      ]
     }
    ],
@@ -302,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,7 +340,6 @@
     "    index = labels == 1\n",
     "    logYhat = np.log(Yhat)\n",
     "    cost = -np.sum(logYhat[index])\n",
-    "    set_trace()\n",
     "    \n",
     "    ### END YOUR CODE\n",
     "    \n",
@@ -380,25 +369,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "=== For autograder ===\n"
+      "=== For autograder ===\nGradient check passed!\n"
      ]
     },
     {
-     "ename": "NameError",
-     "evalue": "name 'gradcheck_naive' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-1-1279beb8fc59>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# Perform gradcheck on your neural network\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;32mprint\u001b[0m \u001b[1;34m\"=== For autograder ===\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mgradcheck_naive\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;32mlambda\u001b[0m \u001b[0mparams\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mforward_backward_prop\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlabels\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mparams\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mparams\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'gradcheck_naive' is not defined"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ali/projects/deep-learning/cs224d/assignments/assignment1/ENV/lib/python2.7/site-packages/IPython/kernel/__main__.py:26: RuntimeWarning: divide by zero encountered in log\n/home/ali/projects/deep-learning/cs224d/assignments/assignment1/ENV/lib/python2.7/site-packages/IPython/kernel/__main__.py:31: RuntimeWarning: invalid value encountered in double_scalars\n"
      ]
     }
    ],
